# LightBulbFactoryBackend

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
postman/: lightbulb_factory_backend.postman_collection.json
services/admin_service/: Dockerfile  config.py  db.py  deps.py  main.py  models.py  schemas.py
services/order_service/: Dockerfile  config.py  db.py  deps.py  enums.py  main.py  models.py  schemas.py
services/product_service/: Dockerfile  config.py  db.py  deps.py  main.py  models.py  schemas.py  seed.py
shared/: fastapi.py  responses.py  security.py
